add logging functionality with SLF4J

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=logging
+# Logging level
+logging.level.root=INFO
+logging.level.com.logging.logging=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.com.logging.logging.security=WARN
+logging.level.com.logging.logging.critical=ERROR
+
+# Log pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Log file configurations
+logging.file.name=logs/application.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=5
