enhance logging output by adding server name, user name, date and time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Server configuration
+server.name=myserver
+spring.application.name=logging-application
+app.username=${USER:${USERNAME:system}}
+
 # Logging level
 logging.level.root=INFO
 logging.level.com.logging.logging=TRACE
@@ -6,7 +11,8 @@ logging.level.com.logging.logging.security=WARN
 logging.level.com.logging.logging.critical=ERROR
 
 # Log pattern
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [${server.name}] [${USER}] [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [${server.name}] [${USER}] [%thread] %-5level %logger{36} - %msg%n
 
 # Log file configurations
 logging.file.name=logs/application.log
