--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/aws-lambda": "^8.10.147",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
