update logging configuration to use relative paths and add endpoint for log generation

--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -15,6 +15,6 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [${server.name}] [${USER}] [
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [${server.name}] [${USER}] [%thread] %-5level %logger{36} - %msg%n
 
 # Log file configurations
-logging.file.name=logs/application.log
+logging.file.name=./springboot/logs/application.log
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=5
